--- a/planet/package.json
+++ b/planet/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "gsap": "^3.13.0",
+    "lil-gui": "^0.20.0",
     "tailwindcss": "^4.1.13",
     "three": "^0.180.0"
   }
